<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/url_header">

        <EditTextPreference
            app:key="url"
            app:title="@string/url_title"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Anmeldung">

        <EditTextPreference
            app:key="name"
            android:singleLine="true"
            app:title="@string/auth_name"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="auth_pw"
            app:title="@string/auth_pw"
            android:summary="@string/pw_summary"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>